ingress-demo/apps_for_ingress_demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      name: blue-dp
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: benadabankah/kofi_html_website:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      name: green-dp
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: benadabankah/kofi_html_website:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: green
  ports:
  - port: 80
    targetPort: 80


---
# Node Port Service
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mavenwebapp
  name: mavenwebapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: mavenwebapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springappdeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      name: springapppod
      labels:
        app: springapp
    spec:
      containers:
      - name: springappcontainer
        image: benadabankah/spring-boot-mongo
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springapp
spec:
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
