ingress-demo/springboot.yml
# Node Port Service
apiVersion: v1
kind: Service
metadata:
  labels:
    name: springboot
  name: springboot
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 8080
    - port: 443
      name: https
      targetPort: 8080  
  selector:
    name: springboot
